fixed off-centered receipt

--- a/qr/static/style.css
+++ b/qr/static/style.css
@@ -13,7 +13,7 @@
         max-width: 320px;
         min-height:353px;
         margin: auto;
-        padding:2rem 1rem;
+        padding:30px 0;
         color: #3f3f3f;
         background:white;
         position: relative;
